Fix button stroke on Safari

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -84,25 +84,46 @@ body {
     text-align: center;
 }
 
-.button-container {
-    filter: drop-shadow(0.5vmin 0 0 #000000) drop-shadow(0 0.5vmin 0 #000000) drop-shadow(-0.5vmin 0 0 #000000) drop-shadow(0 -0.5vmin 0 #000000);
-}
-
-.button-container-small {
-    filter: drop-shadow(0.25vmin 0 0 #000000) drop-shadow(0 0.25vmin 0 #000000) drop-shadow(-0.25vmin 0 0 #000000) drop-shadow(0 -0.25vmin 0 #000000);
-}
-
+.button-container,
 .button {
     position: fixed;
     text-align: center;
     font-size: 7vmin;
     background-color: #FFFF00;
     color: #000000;
-    padding-left: 2vmin;
-    padding-right: 2vmin;
+    width: 25vmin;
     height: 8vmin;
     line-height: 8vmin;
     clip-path: polygon(10% 0, 100% 0, 100% 70%, 90% 100%, 0 100%, 0 30%);
+}
+
+.button-container-small,
+.button-small {
+    position: fixed;
+    text-align: center;
+    font-size: 3.5vmin;
+    background-color: #FFFF00;
+    color: #000000;
+    width: 12.5vmin;
+    height: 4vmin;
+    line-height: 4vmin;
+    clip-path: polygon(10% 0, 100% 0, 100% 70%, 90% 100%, 0 100%, 0 30%);
+}
+
+.button-container {
+    background-color: #000000;
+}
+
+.button-container-small {
+    background-color: #000000;
+}
+
+.button {
+    transform: scale(95%);
+}
+
+.button-small {
+    transform: scale(95%);
 }
 
 .button:hover,
@@ -110,19 +131,12 @@ body {
     background-color: #B0B000;
 }
 
-.button-small {
-    font-size: 3.5vmin;
-    padding-left: 1vmin;
-    padding-right: 1vmin;
-    height: 4vmin;
-    line-height: 4vmin;
-}
-
-#fullscreen-button {
-    width: 10vmin;
+.button-small:hover,
+.button-small:active {
+    background-color: #B0B000;
 }
 
 #fullscreen-button-container {
-    left: calc(100% - 6.25vmin - 1vmin);
-    bottom: calc(100% - 2.25vmin - 1vmin);
+    left: calc(100% - 12.5vmin - 5vmin);
+    bottom: calc(100% - 4vmin - 5vmin);
 }
